# fast-api-backend

./: main.py  pyproject.toml
api/v1/users/: __init__.py  users.py
app/: server.py
app/container/: container.py
app/controllers/: __init__.py  authController.py  userController.py
app/models/: __init__.py  user.py
app/repositories/: user.py
app/schemas/extras/: token.py
app/schemas/requests/: users.py
app/services/: user.py
core/: config.py
core/database/: session.py
core/factory/: factory.py
core/fastapi/dependencies/: permissions.py
core/fastapi/middlewares/: authentication.py
core/repository/: base.py
core/security/: access_control.py  jwt.py
core/service/: __init__.py  base.py
