[project]
name = "fastapi-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "enrealai",email = "enrealai@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic (>=1.9,<2.0)",
    "SQLAlchemy (>=2.0.4,<3.0.0)",
    "pyjwt (>=2.6.0,<3.0.0)",
    "uvicorn (>=0.20.0,<0.21.0)",
    "fastapi (>=0.92.0,<0.93.0)",
    "celery (>=5.2.7,<6.0.0)",
    "gunicorn (>=20.1.0,<21.0.0)",
    "fastapi-event (>=0.1.3,<0.2.0)",
    "ujson (>=5.7.0,<6.0.0)",
    "click (>=8.1.3,<9.0.0)",
    "greenlet (==1.1.3)",
    "redis (>=4.5.4,<5.0.0)",
    "pydantic (>=1.10.5,<2.0.0)",
    "isort (>=5.12.0,<6.0.0)",
    "black (>=23.1,<24.0)",
    "pylint (>=2.16.2,<3.0.0)",
    "asyncpg (>=0.27.0,<0.28.0)",
    "pytest (>=7.2.1,<8.0.0)",
    "httpx (>=0.23.3,<0.24.0)",
    "pyyaml (>=6.0,<7.0)",
    "email-validator (>=1.3.1,<2.0.0)",
    "python-jose (>=3.3.0,<4.0.0)",
    "cryptography (>=41.0.0,<42.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.0.1,<5.0.0)",
    "faker (>=17.0.0,<18.0.0)",
    "pytest-asyncio (>=0.20.3,<0.21.0)",
    "behave (>=1.2.6,<2.0.0)",
    "binance-connector (>=3.11.0,<4.0.0)",
    "numpy (>=2.2.1,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
]

[tool.poetry]
packages = [
    { include = "main.py"}
]

[tool.poetry.group.dev.dependencies]
black = "^23.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"